# lyricist

./: Cargo.toml  README.md
src/: constants.rs  keyboard_event.rs  main.rs  renderer.rs  state.rs
src/requests/: lib.rs  main.rs  requests.rs  response.rs
src/watch/: main.rs
