[package]
name = "lyricist"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "req"
path = "./src/requests/main.rs"

[dependencies]
async-std = {version = "1", features = ["attributes"]}
crossterm = {version = "0.28.1", features = ["event-stream"]}
futures = "0.3.30"
futures-timer = "3.0.3"
latest = "0.1.1"
ratatui = "0.27.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

