[package]
name = "lyricist"
version = "0.1.0"
edition = "2021"

[lib]
name = "libreq"
path = "./src/requests/lib.rs"

[[bin]]
name = "req"
path = "./src/requests/main.rs"


[dependencies]
async-std = {version = "1", features = ["attributes"]}
crossterm = {version = "0.28.1", features = ["event-stream"]}
futures = "0.3.30"
futures-timer = "3.0.3"
latest = "0.1.1"
ratatui = "0.27.0"
reqwest = { version = "0.12", features = ["json"] }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
